--- a/window_main.glade
+++ b/window_main.glade
@@ -1257,13 +1257,26 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="TextView">
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
-            <property name="sensitive">False</property>
-            <property name="can_focus">False</property>
-            <property name="editable">False</property>
-            <property name="cursor_visible">False</property>
-            <property name="input_purpose">terminal</property>
+            <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">never</property>
+            <property name="vscrollbar_policy">always</property>
+            <property name="shadow_type">in</property>
+            <property name="overlay_scrolling">False</property>
+            <child>
+              <object class="GtkTextView" id="TextView">
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">False</property>
+                <property name="hscroll_policy">natural</property>
+                <property name="vscroll_policy">natural</property>
+                <property name="editable">False</property>
+                <property name="justification">center</property>
+                <property name="cursor_visible">False</property>
+                <property name="input_purpose">terminal</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
